button-link spacing fixed

--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,7 @@ a.secondary:active {
 a.link-button,
 a.link-button:hover,
 a.link-button:active {
+    display: inline-block;
     color: inherit;
     text-decoration: none;
 }
